--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ subprojects {
 
     sourceCompatibility = 1.5
     targetCompatibility = 1.5
-    version = '1.59.1'
+    version = '1.59.1-SNAPSHOT'
 
     test {
         systemProperty 'bc.test.data.home', bcTestDataHome
