--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ allprojects {
         testCompile group: 'junit', name: 'junit', version: '4.11'
         // Cobertura declares a dependency on the slf4j API, so we need to supply
         // a runtime implementation to avoid NoClassDefFoundErrors
-        testRuntime "org.slf4j:slf4j-log4j12:1.7.5"
+        compile "org.slf4j:slf4j-log4j12:1.7.5"
         testRuntime "log4j:log4j:1.2.17"
    }
 }
