--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,12 @@ allprojects {
    }
 
    dependencies {
-        testCompile group: 'junit', name: 'junit', version: '4.11'
+	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+        
+	testCompile group: 'junit', name: 'junit', version: '4.11'
         // Cobertura declares a dependency on the slf4j API, so we need to supply
         // a runtime implementation to avoid NoClassDefFoundErrors
-        compile "org.slf4j:slf4j-log4j12:1.7.5"
+        testCompile "org.slf4j:slf4j-log4j12:1.7.5"
         testRuntime "log4j:log4j:1.2.17"
    }
 }
